# realtor-ai-copilot

./: .gitignore  README.md  jest.config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql  tsconfig.json
.openclaw/: workspace-state.json
config/: cron.yml  logging.toml  secrets.template.json
data/: sample_listings.csv  sample_profile.json
pipelines/: ai_analysis_worker.py  enrich_listings.py  ingest_mls.py  match_engine.py  notify_agents.py  packet_generator.py
services/api/: main.py
skills/real_estate_search/: SKILL.md  sample-data.json  search.py
src/: index.ts
src/llm/: index.ts
src/packet/: index.ts
src/packet/templates/: default.ts
src/realtor_ai/models/: __init__.py  base.py  database.py
src/realtor_ai/services/: prompts.py  repository.py  scoring.py
src/realtor_ai_copilot/: __init__.py  main.py  models.py
src/realtor_ai_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/realtor_ai_copilot/analysis/: __init__.py  generator.py
src/realtor_ai_copilot/ingestion/: __init__.py  loader.py
src/realtor_ai_copilot/matching/: __init__.py  scorer.py
src/realtor_ai_copilot/reports/: __init__.py  pdf_builder.py
src/scoring/: index.ts
src/types/: index.ts
tests/: conftest.py  llm.test.ts  packet.test.ts  scoring.test.ts  test_analysis.py  test_ingestion.py  test_matching.py  test_models.py  test_pdf_builder.py
