[project]
name = "realtor-ai-copilot"
version = "0.1.0"
description = "AI-powered research assistant for buyer's agents"
requires-python = ">=3.11"
authors = [
    { name = "menoottawa" }
]
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "google-api-python-client>=2.123",
    "jinja2>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-mock>=3.12",
    "ruff>=0.3"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
